Fixed security issue: iframe without sandbox
LF-1638

--- a/demo.html
+++ b/demo.html
@@ -37,7 +37,7 @@
     <noscript><iframe
         src="https://www.googletagmanager.com/ns.html?id=GTM-59GQ6JK"
         height="0" width="0" style="display:none;visibility:hidden"
-        title="googletagmanager"></iframe></noscript>
+        title="googletagmanager" sandbox></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
 
     <!-- page header -->
